# pyproject.toml
# followed this: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# Run 
# ```bash
# $ python3 -m pip install -e .
# ```
# to install this package on your machine

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cilpy"
version = "0.1.0"
authors = [
  { name="Willie Loftie-Eaton", email="willieloea@gmail.com" }
]
description = "A Computational Intelligence library for studying metaheuristics in Python."
readme = "README.md"
requires-python = ">=3.8"

# Add any external dependencies here, e.g.,
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=8.4.2"
]

# [project.urls]
# Homepage = "https://github.com/willieloea/cilpy"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/willieloea/cilpy"

[tool.setuptools]
packages = ["cilpy"]
